test_programs/compile_failure/noirc_frontend_tests_unconstrained_type_parameter_in_trait_impl/src/main.nr

        pub trait Trait<T> {}
        pub struct Foo<T> {}

        impl<T, U> Trait<T> for Foo<T> {}

        fn main() {}
        